# ag-news

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
.dvc/: config
ag_news/: constants.py  dataloaders.py  dataloaders_preproc.py  download_data.py  infer.py  load_data.py  logging_utils.py  lstm_model.py  model_selector.py  preprocess.py  preprocessing.py  rnn_model.py  test.py  text_dataset.py  tokenizer.py  train.py  trainer.py
ag_news/data_load/: download_data.py
ag_news/infer/: infer.py
ag_news/lightning_logs/version_32/: hparams.yaml
ag_news/lightning_logs/version_5/: hparams.yaml
ag_news/lightning_logs/version_6/: hparams.yaml
ag_news/lightning_logs/version_9/: hparams.yaml
ag_news/modules/: compile_to_onnx.py  constants.py  dataloaders.py  download_data.py  lstm_model.py  model_selector.py  preprocessing.py  rnn_model.py  trainer.py
ag_news/outputs/2025-05-02/16-19-58/.hydra/: config.yaml  hydra.yaml
ag_news/outputs/2025-05-02/18-10-13/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/14-10-11/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/15-38-12/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-19-55/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-20-53/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-27-16/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-27-48/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-29-32/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-29-54/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-30-23/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-32-00/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-32-18/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-33-59/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-34-19/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-38-26/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-42-29/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-42-48/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-44-05/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-45-52/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/16-47-34/.hydra/: hydra.yaml
ag_news/outputs/2025-05-04/17-09-49/.hydra/: hydra.yaml
ag_news/train/: train.py
config/: config.yaml
config/data_load/: data_load.yaml
config/logging/: logging.yaml
config/model/: model.yaml
config/training/: training.yaml
data/: .gitignore  ag_news_train.csv.dvc
data/ag_news_data/: .gitignore  ag_news_test.csv.dvc
data/vocab_data/: vocab.json.dvc  vocab_json
lightning_logs/version_0/: hparams.yaml
models/: epoch=09-val_loss=0.3781.ckpt.dvc
plots/wandb/: latest-run
plots/wandb/run-20250524_190123-o2i2clsm/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
triton/: Dockerfile.web  triton.py  web_app.py
triton/model_repository/text_classifier/: config.pbtxt
triton/sources/: .gitignore  text_classifier.onnx.dvc
(+85 files in other folders)
